--- a/frontend/src/app/component/default-login-layout/default-login-layout.html
+++ b/frontend/src/app/component/default-login-layout/default-login-layout.html
@@ -6,6 +6,7 @@
     </section>
     
     <section class="form-section">
+        <div id="particles-js" class="particles-background"></div>
         <div class="form-content">
             <div class="logo-header">
                 <div class="logo-circle">
