--- a/frontend/src/app/layout/main-layout/main-layout.html
+++ b/frontend/src/app/layout/main-layout/main-layout.html
@@ -1,7 +1,9 @@
 <div class="layout-container">
   <aside class="sidebar">
     <div class="brand-block">
-      <div class="brand-mark">NF</div>
+      <div class="brand-mark">
+        <img src="img/icon.png" alt="Icon" class="header-icon-menu">
+      </div>
       <div class="brand-copy">
         <strong>Importador XML</strong>
         <span>Painel Fiscal</span>
