--- a/frontend/src/app/layout/main-layout/main-layout.scss
+++ b/frontend/src/app/layout/main-layout/main-layout.scss
@@ -31,6 +31,12 @@
   font-size: 15px;
   font-weight: 700;
   background: rgba(255, 255, 255, 0.18);
+  
+  .header-icon-menu {
+    width: 30px;
+    height: auto;
+    object-fit: contain;
+  }
 }
 
 .brand-copy {
