Ajuste de arquivo corrompido

--- a/frontend/src/app/components/primary-input/primary-input.scss
+++ b/frontend/src/app/components/primary-input/primary-input.scss
@@ -30,7 +30,7 @@
             input{
             border-radius: 8px 0 0 8px;
             background-color: &$gray-secundary-bg;
-            border: none;
+            border: solid 2px mediumpurple;
             padding: 12px 0px 12px 20px ;
             width: 100%;
         }
