--- a/frontend/src/app/pages/signup/signup.html
+++ b/frontend/src/app/pages/signup/signup.html
@@ -14,7 +14,7 @@
         inputName="name" 
         type="text"
         label="Your Name"
-        placeholder="Enter your name">
+        placeholder="Name completo">
             <img src="svg/email.svg"/>
         </app-primary-input>
 
