atualizar documentação do backend

--- a/frontend/src/app/pages/signup/signup.html
+++ b/frontend/src/app/pages/signup/signup.html
@@ -13,7 +13,7 @@
         formControlName="name"
         inputName="name" 
         type="text"
-        label="Your Name"
+        label="Seu nome"
         placeholder="Name completo">
             <img src="svg/email.svg"/>
         </app-primary-input>
@@ -31,7 +31,7 @@
         formControlName="password"
         inputName="password" 
         type="password"
-        label="Your Password">
+        label="Sua Senha">
             <img src="svg/password.svg"/>
         </app-primary-input>
 
@@ -39,10 +39,9 @@
         formControlName="passwordConfirm"
         inputName="passwordConfirm" 
         type="password"
-        label="Confirm Your Password">
+        label="Confirme sua senha">
             <img src="svg/password.svg"/>
         </app-primary-input>
-        <span>Forgot Password?</span>
     </form>
 
 
