fix: corrigir label de senha para português

--- a/frontend/src/app/pages/login/login.html
+++ b/frontend/src/app/pages/login/login.html
@@ -22,7 +22,8 @@
         formControlName="password"
         inputName="password" 
         type="password"
-        label="Your Password">
+        label="Sua Senha"
+        >
             <img src="svg/password.svg"/>
         </app-primary-input>
     </form>
