fix: traduzir botões para português

--- a/frontend/src/app/pages/login/login.html
+++ b/frontend/src/app/pages/login/login.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
     [title]="'Login into your account'"
-    [primaryBtnText]="'Login Now'"
-    [secondaryBtnText]="'Signup Now'"
+    [primaryBtnText]="'Login'"
+    [secondaryBtnText]="'Cadastrar'"
     (submit)="submit()"
     (navigate)="navigate()"
     [disablePrimaryBtn]="!loginForm.valid"
