--- a/frontend/src/app/pages/signup/signup.html
+++ b/frontend/src/app/pages/signup/signup.html
@@ -1,7 +1,7 @@
 <app-default-login-layout
     [title]="'Login into your account'"
-    [primaryBtnText]="'Signup Now'"
-    [secondaryBtnText]="'Login Now'"
+    [primaryBtnText]="'Inscreva-se agora'"
+    [secondaryBtnText]="'Login'"
     (submit)="submit()"
     (navigate)="navigate()"
     [disablePrimaryBtn]="!signupForm.valid"
